--- a/src/Pelagos/Bundle/AppBundle/Resources/views/MdApp/main.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/MdApp/main.html.twig
@@ -110,7 +110,7 @@
                                    {% if sname == 'backtosubmitter' %}
                                        change to <input type="submit" name="to" value="InReview" id="state_sel_sub_{{dta.udi}}">
                                     {% else %}
-                                        <p>no action available</p>
+                                        no action available
                                     {% endif %}
                             </form>
                             </td>
