Fixed the green banner and to get the appropriate locked message

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/index.html.twig
@@ -125,7 +125,7 @@
             Successfully imported XML.
         </div>
         {% endif %}
-        {% if xmlStatus.success is null and  datasetSubmission.status == constant('Pelagos\\Entity\\DatasetSubmission::STATUS_COMPLETE') %}
+        {% if xmlStatus.success is null and  datasetSubmissionLockStatus == true %}
         <div class="messages warning">
             <h2 class="element-invisible">Status message</h2>
             Dataset Identifier <b>'{{ udi }}'</b> was found. The latest version has been loaded.
