--- a/src/Pelagos/Bundle/AppBundle/Resources/views/MdApp/main.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/MdApp/main.html.twig
@@ -27,6 +27,7 @@
         add_js(
             [
                 '//cdn.datatables.net/1.10.7/js/jquery.dataTables.js',
+                '//cdnjs.cloudflare.com/ajax/libs/jquery-noty/2.3.5/packaged/jquery.noty.packaged.min.js',
             ]
         )
     }}
@@ -34,6 +35,7 @@
     {% javascripts
         '@PelagosAppBundle/Resources/public/js/mdapp.js'
         '@FOSJsRoutingBundle/Resources/public/js/router.js'
+        '@PelagosAppBundle/Resources/public/js/pelagosNoty.js'
     %}
         {{ add_js(asset_url) }}
     {% endjavascripts %}
@@ -43,10 +45,12 @@
 {% endblock %}
 
 {% block body %}
-
-{% for flashMessage in app.session.flashbag.get('notice') %}
-    <div class="messages status">{{ flashMessage }}</div>
-{% endfor %}
+    
+    {% for label, messages in app.flashes(['success', 'error']) %}
+        {% for message in messages %}
+            <div class="pelagosNoty" text="{{message}}" type="{{label}}"></div>
+        {% endfor %}
+    {% endfor %}
 
     <!--  Filtering Tabs at the top of MDAPP -->
 <script type="text/javascript">var issueTrackingBaseUrl="{{ issueTrackingBaseUrl }}";</script>
