--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/submit.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/submit.html.twig
@@ -7,7 +7,7 @@
 {% block body %}
     <div class="messages status">
         <h2 class="element-invisible">Status message</h2>
-        Dataset review ended by {{ DatasetSubmission.getModifier.getFirstName }}  at {{ DatasetSubmission.getSubmissionTimeStamp.format('c') }}
+        Dataset review ended by {{ DatasetSubmission.getDatasetSubmissionReview.getReviewEndedBy.getFirstName }}  at {{ DatasetSubmission.getDatasetSubmissionReview.getReviewEndDateTime.format('c') }}
     </div>
 
     <fieldset>
