--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Dataland/details.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Dataland/details.html.twig
@@ -3,7 +3,7 @@
     {{ dataset.abstract|default }}
 </div>
 
-{% if dataset.metadataStatus == constant('Pelagos\\Entity\\DatasetSubmission::METADATA_STATUS_ACCEPTED') %}
+{% if dataset.metadataStatus == constant('Pelagos\\Entity\\Dataset::DATASET_STATUS_ACCEPTED') %}
 
     {% if dataset.datasetSubmission.purpose|default %}
         <h2>Purpose:</h2>
