--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Dataland/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Dataland/index.html.twig
@@ -53,7 +53,7 @@
 
                     <div id="dlolmap" style="width: 640px;height: 480px;"
                         wkt="{{wkt|default}}"
-                        description= {{ (dataset.metadataStatus == constant('Pelagos\\Entity\\Dataset::DATASET_STATUS_ACCEPTED')) ? dataset.datasetSubmission.spatialExtentDescription : "" }}
+                        description= {{ (dataset.datasetStatus == constant('Pelagos\\Entity\\Dataset::DATASET_STATUS_ACCEPTED')) ? dataset.datasetSubmission.spatialExtentDescription : "" }}
                     {% image '@PelagosAppBundle/Resources/public/images/labonly.png' %}
                         labimage="{{asset_url}}">
                     {% endimage %}
