Add End View action button

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/submission-form.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/submission-form.html.twig
@@ -3,6 +3,7 @@
     {{ form_widget(form.acceptDatasetBtn, {'label':'Accept Review'} ) }}
     {{ form_widget(form.endReviewBtn, {'label':'End Review'} ) }}
     {{ form_widget(form.requestRevisionsBtn, {'label':'Request Revisions'} ) }}
+    <button type="button" id="EndViewBtn">End View</button>
 </div>
     <fieldset>
         <div style="background: transparent;" id="dtabs">
