Added new error image

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/dif.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/dif.html.twig
@@ -174,4 +174,7 @@
 
 <div id="noresults" title="Search...">No Results Found.</div>
 <div class="modal" id="spinner"></div>
+    {% image '@PelagosAppBundle/Resources/public/images/cancel.png'%}
+        <img id="imgCancel" src="{{ asset_url }}" style="display:none">
+    {% endimage %}
 {% endblock %}
