--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DataDiscovery/datasets.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DataDiscovery/datasets.html.twig
@@ -1,5 +1,5 @@
 <div id="tabs">
-    {% if counts.available | length or counts.restricted | length or counts.inReview | length or counts.identified | length %}
+    {% if counts.available > 0 or counts.restricted > 0 or counts.inReview > 0 or counts.identified > 0 %}
 
         <div id="tablist" class="row">
             <div class="cell">
@@ -11,7 +11,6 @@
                 </ul>
             </div>
         </div>
-
             <div id="tab-1" class="tab row">
                 <div class="cell">
                     <div class="viewport">
@@ -63,9 +62,7 @@
                     </div> <!-- viewport -->
                 </div> <!-- cell -->
             </div> <!-- tab4 -->
-
     {% else %}
-
         <div id="no-datasets" class="row">
             <div class="cell">
                 <div style="color:red; padding:10px; text-align:center; font-weight:bold; font-size:150%;">There were no datasets found that match your search criteria.</div>
@@ -75,9 +72,7 @@
     {% endif %}
 </div>
 {% include 'PelagosAppBundle:DataDiscovery:template-dataset-row.html.twig' %}
-
 <script>
-
 // if ($('#show_all_extents_checkbox').is(':checked')) {
 //     if (datasets[0]) {
 //         for (var i=0; i<datasets[0].length; i++) {
@@ -103,5 +98,4 @@
 //         myGeoViz.removeAllFeaturesFromMap();
 //     }
 // });
-
 </script>
