--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DataDiscovery/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DataDiscovery/index.html.twig
@@ -55,8 +55,8 @@
                     <div id="olmap"></div>
                     <div id="map_buttons">
                         <div class="map_button_container">
-                            <label for="show_all_extents_checkbox" id="show_all_extents_label">Show All Extents</label>
-                            <input type="checkbox" id="show_all_extents_checkbox" class="map_button" onclick="showAllExtents();">
+                            <label for="show_extents_checkbox" id="show_extents_label">Show Extents</label>
+                            <input type="checkbox" id="show_extents_checkbox" class="map_button" onclick="showAllExtents();">
                         </div>
                         <div class="map_button_container">
                             <input type="button" id="clearGeoFilterButton" class="map_button" value="Clear Filter" disabled onclick="$(this).button('disable');myGeoViz.clearFilter();trees['tree'].geo_filter = null;applyFilter();">
