--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DataDiscovery/template-dataset-row.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DataDiscovery/template-dataset-row.html.twig
@@ -14,6 +14,7 @@
         </a>.
         <span id="container-dataset-research-group"><span id="dataset-research-group"></span>. </span>
         <span id="container-dataset-doi"><span id="label-dataset-doi">DOI: </span><a href="http://dx.doi.org/{{ 'placeholder-doi' }}" target="_blank" id="dataset-doi"></a>. </span>
+        <span id="container-dataset-udi"><span id="label-dataset-udi">UDI: <a href="https://data.gulfresearchinitiative.org/data/{{ 'placeholder-udi' }}" target="_blank" id="dataset-udi"></a>. </span></span>
         <div class="details" style="display:none;"/>
         <div class="attributes">
         [<a href="#" class="details_link">Show Details</a>]
