Made keyword target sortable.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/index.html.twig
@@ -58,6 +58,7 @@
         '@PelagosAppBundle/Resources/public/js/mapWizard.js'
         '@PelagosAppBundle/Resources/public/js/common.js'
         '@PelagosAppBundle/Resources/public/js/fileBrowser.js'
+        '@PelagosAppBundle/Resources/public/js/jquery.dragoptions.min.js'
     %}
         {{ add_js(asset_url) }}
     {% endjavascripts %}
