--- a/src/Pelagos/Bundle/AppBundle/Resources/public/css/sidebyside.css
+++ b/src/Pelagos/Bundle/AppBundle/Resources/public/css/sidebyside.css
@@ -1,21 +1,68 @@
-
-
-.flex-container {
-    display: flex;
+.side-table {
+    width: 100%;
 }
 
-.flex-row {
-    flex-direction: column;
-    display: flex;
-
+.grid-container {
+    display:grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: start;
+    overflow:scroll;
+    height:100%;
 }
 
-.ds-metadata {
-    flex-direction: column;
-    display: flex;
-    flex: 1 0;
-    overflow: auto;
-    min-height: fill-available;
-    white-space: nowrap;
+.grid-group {
+   display:contents;
+   grid-auto-rows: 1fr;
 }
+
+#left.grid-group > div.ds-metadata {
+    grid-column: 1;
+}
+
+#right.grid-group > div.ds-metadata {
+    grid-column: 2;
+}
+
+.grid-group > div.ds-metadata:nth-child(1) {
+  grid-row: 1;
+  
+}
+
+.grid-group > div.ds-metadata:nth-child(2) {
+  grid-row: 2;
+}
+
+.grid-group > div.ds-metadata:nth-child(3) {
+  grid-row: 3;
+  grid-column: 1;
+}
+
+.grid-group > div.ds-metadata:nth-child(4) {
+  grid-row: 4;
+  grid-column: 1;
+}
+
+.grid-group > div.ds-metadata:nth-child(5) {
+  grid-row: 5;
+  grid-column: 1;
+}
+
+.grid-group > div.ds-metadata:nth-child(6) {
+  grid-row: 6;
+  grid-column: 1;
+}
+
+.grid-group > div.ds-metadata:nth-child(7) {
+  grid-row: 7;
+  grid-column: 1;
+}
+
+.grid-group > div.ds-metadata:nth-child(8) {
+  grid-row: 8;
+  grid-column: 1;
+}
+
+
+
+
 
