--- a/src/Pelagos/Bundle/AppBundle/Resources/views/SideBySide/submissionForm.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/SideBySide/submissionForm.html.twig
@@ -1,33 +1,33 @@
 {% block body %}
-    <div id="ds-contact" class="ds-metadata flex-column">
+    <div id="ds-contact" class="ds-metadata gridc-item-contact">
         {% include 'PelagosAppBundle:DatasetReview:dataset-contact.html.twig' %}
     </div>
 
-    <div id="ds-information" class="ds-metadata flex-column">
+    <div id="ds-information" class="ds-metadata gridc-item-information">
         {% include 'PelagosAppBundle:DatasetReview:dataset-information.html.twig' %}
     </div>
 
-    <div id="ds-keywords" class="ds-metadata flex-column">
+    <div id="ds-keywords" class="ds-metadata gridc-item-keywords">
         {% include 'PelagosAppBundle:DatasetReview:keywords.html.twig' %}
     </div>
 
-    <div id="ds-extent" class="ds-metadata flex-column">
+    <div id="ds-extent" class="ds-metadata gridc-item-extent">
         {% include 'PelagosAppBundle:DatasetReview:extent.html.twig' %}
     </div>
 
-    <div id="ds-distribution" class="ds-metadata flex-column">
+    <div id="ds-distribution" class="ds-metadata gridc-item-distribution">
         {% include 'PelagosAppBundle:DatasetReview:distribution-info.html.twig' %}
     </div>
 
-    <div id="ds-distribution-contact" class="ds-metadata flex-column">
+    <div id="ds-distribution-contact" class="ds-metadata gridc-item-distribution-contact">
         {% include 'PelagosAppBundle:DatasetReview:distribution-contact.html.twig' %}
     </div>
 
-    <div id="ds-metadata-contact" class="ds-metadata flex-column">
+    <div id="ds-metadata-contact" class="ds-metadata gridc-item-metadata-contact">
         {% include 'PelagosAppBundle:DatasetReview:metadata-contact.html.twig' %}
     </div>
 
-    <div id="ds-submit" class="ds-metadata flex-column">
+    <div id="ds-submit" class="ds-metadata gridc-item-files">
         {#% include 'PelagosAppBundle:DatasetReview:file-submit.html.twig' %#}
     </div>
 {% endblock %}
