Working side by side view, map doesn't work.

--- a/src/Pelagos/Bundle/AppBundle/Resources/public/css/dataset-submission.css
+++ b/src/Pelagos/Bundle/AppBundle/Resources/public/css/dataset-submission.css
@@ -27,6 +27,7 @@
 
 .keywordinput {
     width:350px;
+    height:100%;
 }
 
 .dstablink {
@@ -170,3 +171,5 @@ table.dataTable.stripe tbody tr:hover {
 {
     display:none;
 }
+
+
