--- a/src/Pelagos/Bundle/AppBundle/Resources/public/css/sidebyside.css
+++ b/src/Pelagos/Bundle/AppBundle/Resources/public/css/sidebyside.css
@@ -6,7 +6,7 @@
     display:grid;
     grid-template-columns: repeat(2, 1fr);
     align-items: start;
-    overflow:scroll;
+    overflow:auto;
     height:100%;
 }
 
