Working map, with google sat view.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/SideBySide/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/SideBySide/index.html.twig
@@ -22,6 +22,7 @@
                 '//cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/css/select2.min.css',
                 '//cdnjs.cloudflare.com/ajax/libs/animate.css/3.3.0/animate.min.css',
                 '//cdnjs.cloudflare.com/ajax/libs/file-uploader/5.11.8/fine-uploader-new.min.css',
+                '//cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.2.0/css/ol.css',
             ]
         )
     }}
@@ -43,6 +44,7 @@
                 '//cdn.datatables.net/select/1.0.1/js/dataTables.select.min.js',
                 '//cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.11.1/jquery.validate.min.js',
                 '//cdnjs.cloudflare.com/ajax/libs/openlayers/2.13.1/OpenLayers.js',
+                '//cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.2.0/build/ol.js',
                 '//cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/js/select2.min.js',
                 '//cdnjs.cloudflare.com/ajax/libs/datejs/1.0/date.min.js',
                 '//cdnjs.cloudflare.com/ajax/libs/spin.js/2.0.1/spin.min.js',
@@ -59,6 +61,7 @@
         '@PelagosAppBundle/Resources/public/js/sidebyside.js'
         '@PelagosAppBundle/Resources/public/js/geoviz.js'
         '@PelagosAppBundle/Resources/public/js/mapWizard.js'
+        '@PelagosAppBundle/Resources/public/js/gMap.js'
         '@PelagosAppBundle/Resources/public/js/common.js'
         '@PelagosAppBundle/Resources/public/js/fileBrowser.js'
     %}
