--- a/src/Pelagos/Bundle/AppBundle/Resources/views/SideBySide/submissionForm.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/SideBySide/submissionForm.html.twig
@@ -12,7 +12,7 @@
     </div>
 
     <div id="ds-extent" class="ds-metadata gridc-item-extent">
-        {% include 'PelagosAppBundle:DatasetReview:extent.html.twig' %}
+        {% include 'PelagosAppBundle:SideBySide:extent.html.twig' %}
     </div>
 
     <div id="ds-distribution" class="ds-metadata gridc-item-distribution">
