--- a/src/Pelagos/Bundle/AppBundle/Resources/views/SideBySide/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/SideBySide/index.html.twig
@@ -74,8 +74,15 @@
 {% block body %}
 
 <div>
-<h1>UDI: {{ udi | default }} </h1>
+<h1>UDI: <span class="udi-title"></span></h1>
 <table class="side-table">
+    <tr>
+        <td colspan="8" width="100%">
+            <label>UDI:</label>
+            <input name="udi" size="100">
+            <button id="get-versions-button" type="button">Get UDI</button>
+        </td>
+    <tr>
     <tr>
         <td>
             <div class="left-version">
@@ -83,10 +90,8 @@
                     <tr>
                         <td colspan="4">
                             <label>Version:</label>
-                            <select>
-                            {% for submission in submissions %}
-                                <option data-version="{{submission.version}}" data-udi="{{submission.udi}}" data-status="{{submission.status}}" data-modifier="{{submission.modifier}}" data-modificationtimestamp="{{submission.modificationtimestamp}}" {% if loop.first %} selected {% endif %}>{{ submission.sequence }}</option>
-                            {% endfor %}
+                            <select class="version-select">
+                                <option>[PLEASE ENTER AN UDI FIRST]</option>
                             </select>
                         </td>
                     </tr>
@@ -113,10 +118,8 @@
                     <tr>
                         <td colspan="4">
                             <label>Version:</label>
-                            <select id="right-version">
-                                {% for submission in submissions %}
-                                <option data-version="{{submission.version}}" data-udi="{{submission.udi}}" data-status="{{submission.status}}" data-modifier="{{submission.modifier}}" data-modificationtimestamp="{{submission.modificationtimestamp}}" {% if loop.last %} selected {% endif %}>{{ submission.sequence }}</option>
-                                {% endfor %}
+                            <select class="version-select">
+                                <option>[PLEASE ENTER AN UDI FIRST]</option>
                             </select>
                         </td>
                     </tr>
@@ -142,9 +145,8 @@
 </div>    
 <hr>
 <div class="grid-container">
-    <div id="left" class="grid-group"><h1>LOADING LEFT PANE</div>
-    <div id="right" class="grid-group"><h1>LOADING RIGHT PANE<h1></div>
-
+    <div id="left" class="grid-group"></div>
+    <div id="right" class="grid-group"></div>
 </div>
 
 {% endblock %}
