Spinner for loading, some error handling.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/SideBySide/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/SideBySide/index.html.twig
@@ -148,5 +148,12 @@
     <div id="left" class="grid-group"></div>
     <div id="right" class="grid-group"></div>
 </div>
+<div class="spinner">
+    <div>
+        {% image '@PelagosAppBundle/Resources/public/images/spinner.gif' %}
+            <img src="{{ asset_url }}">
+        {% endimage %}
+    </div>
+</div>
 
 {% endblock %}
