Added file and restricted section.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/SideBySide/submissionForm.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/SideBySide/submissionForm.html.twig
@@ -28,6 +28,6 @@
     </div>
 
     <div id="ds-submit" class="ds-metadata gridc-item-files">
-        {#% include 'PelagosAppBundle:DatasetReview:file-submit.html.twig' %#}
+        {% include 'PelagosAppBundle:SideBySide:file-submit.html.twig' %}
     </div>
 {% endblock %}
