--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/submit.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/submit.html.twig
@@ -14,12 +14,12 @@
         <table border="1" width="100%" style="background-color:white; color:black;">
             <tr>
                 <td width="200px" align="top">
-                    <b>Submission Identifier:</b>
+                    <b>Dataset UDI:</b>
                 </td>
                 <td>
                     <h2>
-                        <a href="{{ path('pelagos_app_ui_datasetreview_default') }}?udiReview={{ DatasetSubmission.getDatasetSubmissionId }}">
-                            {{ DatasetSubmission.getDatasetSubmissionId }}
+                        <a href="{{ path('pelagos_app_ui_dataland_default', {'udi': DatasetSubmission.dataset.udi}) }}">
+                            {{ DatasetSubmission.dataset.udi }}
                         </a>
                     </h2>
                 </td>
