--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/difForm.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/difForm.html.twig
@@ -254,7 +254,7 @@
                     <p>The approximate time period when the data is expected to be collected and generated based on the information provided in your GoMRI proposal.</p>
                 </div>
             </span>
-            <label><b>Estimated Data Sampling/Generation Period: </b></label>
+            <label class="emRequired"><b>Estimated Data Sampling/Generation Period: </b></label>
             <center>
                <b>Start Date</b>
                {{ form_widget(form.estimatedStartDate) }}
