Added admin page, make select it bit bigger, trimmed UDI. Merged develop.

--- a/src/Pelagos/Bundle/AppBundle/Resources/public/css/sidebyside.css
+++ b/src/Pelagos/Bundle/AppBundle/Resources/public/css/sidebyside.css
@@ -6,6 +6,10 @@
     width: 100%;
 }
 
+.version-select {
+    height:25px;
+}
+
 .grid-container {
     display:grid;
     grid-template-columns: repeat(2, 1fr);
